Fix navbar alignment

--- a/css/style.css
+++ b/css/style.css
@@ -284,10 +284,10 @@ ul.multi-column-dropdown h6 {
 }
 .navbar-nav {
     float: none;
+    display: inline-block;
+    list-style-type: none;
 }
-.navbar-nav > li:nth-child(1) {
-    margin-left: 18em;
-}
+
 .dropdown-menu {
     left: -130%;
 }
